set up d3.js bubble chart

--- a/app/index.html
+++ b/app/index.html
@@ -67,5 +67,6 @@
         <script src="scripts/controllers/newSurvey.js"></script>
         <script src="scripts/controllers/PreSurvey.js"></script>
         <!-- endbuild -->
+    <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
 </body>
 </html>
